examples/sample-product-chart/chart-test/fixtures/policy/test-ingress-compliant.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-compliant-ingress
  namespace: sample
  labels:
    app.kubernetes.io/name: test-compliant-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: test-compliant.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample
                port:
                  number: 80
