examples/sample-product-chart/chart-test/fixtures/policy/test-ingress-noncompliant.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-noncompliant-ingress
  namespace: sample
spec:
  ingressClassName: nginx
  rules:
    - host: test-noncompliant.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample
                port:
                  number: 80
