examples/sample-product-chart/chart-test/fixtures/policy/test-pod-no-annotation-kyverno.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-mutate-kyverno
  labels:
    app: test-mutate-kyverno
spec:
  containers:
    - name: nginx
      image: public.ecr.aws/nginx/nginx:1.27-alpine
