examples/sample-product-chart/chart-test/fixtures/policy/test-pod-trusted-image-kyverno.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-trusted-image-kyverno
  labels:
    app: test-trusted-image-kyverno
spec:
  containers:
    - name: nginx
      image: public.ecr.aws/nginx/nginx:1.29-alpine
