examples/sample-product-chart/chart-test/fixtures/policy/test-pod-untrusted-image-kyverno.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-untrusted-image-kyverno
  labels:
    app: test-untrusted-image-kyverno
spec:
  containers:
    - name: redis
      image: docker.io/library/redis:7-alpine
